[gd_scene load_steps=33 format=3 uid="uid://cpl3ovqtw13ok"]

[ext_resource type="Shader" uid="uid://c4e2x1kcm6urs" path="res://Shaders/fire_shader.tres" id="1_7h5n7"]
[ext_resource type="Script" uid="uid://cmv8hytddpbt7" path="res://Scripts/Zooms/zoom_forge.gd" id="1_gsq1a"]
[ext_resource type="Texture2D" uid="uid://c4jvkl7xni1m" path="res://Assets/Art/Events/Zooms/crafting_zoom.png" id="1_y650y"]
[ext_resource type="Texture2D" uid="uid://48oitsyk7ir4" path="res://Assets/Art/Noise/T_VFX_Noise_465.png" id="2_cnsge"]
[ext_resource type="Texture2D" uid="uid://5hncfitv451a" path="res://Assets/Art/Noise/T_Gradient_circle22.jpg" id="3_gsq1a"]
[ext_resource type="Texture2D" uid="uid://ejynek1siy2n" path="res://Assets/UI/White.png" id="4_x2iem"]
[ext_resource type="Texture2D" uid="uid://dxt3yb4gkjn6x" path="res://Assets/Art/Particles/smoke_07.png" id="6_l85tt"]
[ext_resource type="Texture2D" uid="uid://c673mfqdoecpa" path="res://Assets/Items/Armor.png" id="8_x2iem"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d2k3o"]
bg_color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l85tt"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.701961, 0.921569, 0.960784, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_stk03"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.701961, 0.921569, 0.960784, 1)

[sub_resource type="Gradient" id="Gradient_bvcj7"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_bd1y7"]
gradient = SubResource("Gradient_bvcj7")
fill_to = Vector2(0, 1)

[sub_resource type="Gradient" id="Gradient_xsnog"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_55lkv"]
gradient = SubResource("Gradient_xsnog")
fill_from = Vector2(1, 1)

[sub_resource type="Gradient" id="Gradient_g6knj"]
offsets = PackedFloat32Array(0, 0.20354, 0.513274, 0.787611)
colors = PackedColorArray(1, 0, 0.0166664, 0, 0.98, 0.00979999, 0.00979999, 1, 0.96, 0.384, 0, 1, 0.99, 0.693, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_rfd6m"]
gradient = SubResource("Gradient_g6knj")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rffjl"]
shader = ExtResource("1_7h5n7")
shader_parameter/Scale = Vector2(1, 1)
shader_parameter/Speed = Vector2(0, 1)
shader_parameter/Texture_1 = ExtResource("2_cnsge")
shader_parameter/Texture_2 = SubResource("GradientTexture2D_bd1y7")
shader_parameter/Texture_3 = ExtResource("3_gsq1a")
shader_parameter/Texture_4 = SubResource("GradientTexture2D_55lkv")
shader_parameter/Texture_Color_1D = SubResource("GradientTexture1D_rfd6m")

[sub_resource type="Curve" id="Curve_bna2o"]
_limits = [0.3, 3.0, 0.0, 1.0]
_data = [Vector2(0, 0.3), 0.0, 0.0, 0, 0, Vector2(1, 1.0618), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_www61"]
offsets = PackedFloat32Array(0, 0.625, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="Gradient" id="Gradient_rffjl"]
offsets = PackedFloat32Array(0, 0.642023, 1)
colors = PackedColorArray(1, 0.843137, 0, 1, 1, 0.647059, 0, 1, 1, 1, 1, 0)

[sub_resource type="AtlasTexture" id="AtlasTexture_bna2o"]
atlas = ExtResource("8_x2iem")
region = Rect2(450, 150, 150, 150)

[sub_resource type="Animation" id="Animation_5v5lk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("panelBlack/panelMain/colorBack:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.70493, 0.108717, 9.62615e-08, 1)]
}

[sub_resource type="Animation" id="Animation_l7gfi"]
resource_name = "back_color"
loop_mode = 1
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("panelBlack/panelMain/colorBack:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.70493, 0.108717, 9.62615e-08, 1), Color(0.947725, 0.511956, 0, 1), Color(0.70493, 0.108717, 9.62615e-08, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_eyveo"]
_data = {
&"RESET": SubResource("Animation_5v5lk"),
&"back_color": SubResource("Animation_l7gfi")
}

[sub_resource type="Animation" id="Animation_eyveo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("panelBlack/panelMain/picItem:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("panelBlack/panelMain/picItem:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.5, 0.5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("panelBlack/panelMain/particles_crafting:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("panelBlack/panelMain/particles_crafting3:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("panelBlack/panelMain/particles_crafting2:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("panelBlack/panelMain/particles_crafting4:emitting")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("panelBlack/panelMain/particles_crafting5:emitting")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_www61"]
resource_name = "show_item"
length = 2.0
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("panelBlack/panelMain/picItem:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.275, 0.7, 0.825, 1.3, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(0.8, 0.8), Vector2(0.66, 0.66), Vector2(1, 1), Vector2(0.75, 0.75), Vector2(1.1, 1.1), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("panelBlack/panelMain/picItem:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("panelBlack/panelMain/particles_crafting:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2, 0.4, 1.3, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("panelBlack/panelMain/particles_crafting2:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.7, 0.85, 1.3, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("panelBlack/panelMain/particles_crafting3:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.2, 0.4, 1.3, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("panelBlack/panelMain/particles_crafting4:emitting")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.7, 0.85, 1.3, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("panelBlack/panelMain/particles_crafting5:emitting")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(1.3, 1.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d64w3"]
_data = {
&"RESET": SubResource("Animation_eyveo"),
&"show_item": SubResource("Animation_www61")
}

[sub_resource type="Animation" id="Animation_o2yfc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("panelBlack:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("panelBlack/panelMain:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.5, 0.5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("panelBlack/panelMain:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("panelBlack/panelOutline:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("panelBlack/panelOutline:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("panelBlack/panelOutline:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_dbmyf"]
resource_name = "hide_panel"
length = 0.5
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("panelBlack/panelMain:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.25, 1.25)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("panelBlack/panelMain:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("panelBlack:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("panelBlack/panelOutline:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.2, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("panelBlack/panelOutline:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.2, 0.35, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("panelBlack/panelOutline:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.2, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.4, 1.4)]
}

[sub_resource type="Animation" id="Animation_o0s2c"]
resource_name = "show_panel"
length = 0.4
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("panelBlack/panelMain:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(1.1, 1.1), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("panelBlack/panelMain:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("panelBlack:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rveng"]
_data = {
&"RESET": SubResource("Animation_o2yfc"),
&"hide_panel": SubResource("Animation_dbmyf"),
&"show_panel": SubResource("Animation_o0s2c")
}

[node name="zoomForge" type="Control"]
z_index = 999
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gsq1a")

[node name="panelBlack" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_d2k3o")

[node name="panelOutline" type="Panel" parent="panelBlack"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -480.0
offset_top = -270.0
offset_right = 480.0
offset_bottom = 270.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(480, 270)
theme_override_styles/panel = SubResource("StyleBoxFlat_l85tt")

[node name="panelMain" type="Panel" parent="panelBlack"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -480.0
offset_top = -270.0
offset_right = 480.0
offset_bottom = 270.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
pivot_offset = Vector2(480, 270)
theme_override_styles/panel = SubResource("StyleBoxFlat_stk03")

[node name="colorBack" type="ColorRect" parent="panelBlack/panelMain"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -287.0
offset_top = 5.0
offset_right = 274.0
offset_bottom = 264.0
grow_horizontal = 2
color = Color(0.70493, 0.108717, 9.62615e-08, 1)

[node name="Fire" type="TextureRect" parent="panelBlack/panelMain"]
material = SubResource("ShaderMaterial_rffjl")
layout_mode = 0
offset_left = 236.0
offset_top = 46.0
offset_right = 418.0
offset_bottom = 222.0
texture = ExtResource("4_x2iem")
expand_mode = 1

[node name="Fire2" type="TextureRect" parent="panelBlack/panelMain"]
material = SubResource("ShaderMaterial_rffjl")
layout_mode = 0
offset_left = 357.0
offset_top = 27.0
offset_right = 539.0
offset_bottom = 203.0
texture = ExtResource("4_x2iem")
expand_mode = 1

[node name="Fire3" type="TextureRect" parent="panelBlack/panelMain"]
material = SubResource("ShaderMaterial_rffjl")
layout_mode = 0
offset_left = 498.0
offset_top = 2.0
offset_right = 680.0
offset_bottom = 178.0
texture = ExtResource("4_x2iem")
expand_mode = 1

[node name="picForge" type="TextureRect" parent="panelBlack/panelMain"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_y650y")
expand_mode = 1

[node name="smoke" type="CPUParticles2D" parent="panelBlack/panelMain"]
position = Vector2(881, 155)
amount = 10
texture = ExtResource("6_l85tt")
lifetime = 2.0
speed_scale = 0.4
randomness = 0.3
direction = Vector2(1, -1)
spread = 36.43
gravity = Vector2(0, 0)
initial_velocity_min = 100.0
initial_velocity_max = 100.0
angular_velocity_min = 30.0
angular_velocity_max = 100.0
scale_amount_min = 0.1
scale_amount_max = 0.7
scale_amount_curve = SubResource("Curve_bna2o")
color = Color(0.637843, 0.637843, 0.637843, 1)
color_ramp = SubResource("Gradient_www61")

[node name="particles_crafting" type="CPUParticles2D" parent="panelBlack/panelMain"]
position = Vector2(294, 181)
emitting = false
amount = 50
lifetime = 0.5
one_shot = true
explosiveness = 0.8
emission_shape = 1
emission_sphere_radius = 30.0
gravity = Vector2(0, 150)
initial_velocity_min = 100.0
initial_velocity_max = 200.0
scale_amount_min = 2.0
scale_amount_max = 4.0
color_ramp = SubResource("Gradient_rffjl")

[node name="particles_crafting2" type="CPUParticles2D" parent="panelBlack/panelMain"]
position = Vector2(388, 173)
emitting = false
amount = 50
lifetime = 0.5
one_shot = true
explosiveness = 0.8
emission_shape = 1
emission_sphere_radius = 30.0
gravity = Vector2(0, 150)
initial_velocity_min = 100.0
initial_velocity_max = 200.0
scale_amount_min = 2.0
scale_amount_max = 4.0
color_ramp = SubResource("Gradient_rffjl")

[node name="particles_crafting3" type="CPUParticles2D" parent="panelBlack/panelMain"]
position = Vector2(486, 160)
emitting = false
amount = 50
lifetime = 0.5
one_shot = true
explosiveness = 0.8
emission_shape = 1
emission_sphere_radius = 30.0
gravity = Vector2(0, 150)
initial_velocity_min = 100.0
initial_velocity_max = 200.0
scale_amount_min = 2.0
scale_amount_max = 4.0
color_ramp = SubResource("Gradient_rffjl")

[node name="particles_crafting4" type="CPUParticles2D" parent="panelBlack/panelMain"]
position = Vector2(575, 146)
emitting = false
amount = 50
lifetime = 0.5
one_shot = true
explosiveness = 0.8
emission_shape = 1
emission_sphere_radius = 30.0
gravity = Vector2(0, 150)
initial_velocity_min = 100.0
initial_velocity_max = 200.0
scale_amount_min = 2.0
scale_amount_max = 4.0
color_ramp = SubResource("Gradient_rffjl")

[node name="particles_crafting5" type="CPUParticles2D" parent="panelBlack/panelMain"]
position = Vector2(652, 138)
emitting = false
amount = 50
one_shot = true
explosiveness = 0.8
emission_shape = 1
emission_sphere_radius = 30.0
gravity = Vector2(0, 150)
initial_velocity_min = 100.0
initial_velocity_max = 200.0
scale_amount_min = 2.0
scale_amount_max = 4.0
color_ramp = SubResource("Gradient_rffjl")

[node name="picItem" type="TextureRect" parent="panelBlack/panelMain"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -132.0
offset_top = 90.0
offset_right = 18.0
offset_bottom = 240.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
pivot_offset = Vector2(75, 75)
texture = SubResource("AtlasTexture_bna2o")
expand_mode = 1

[node name="animBackColor" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_eyveo")
}

[node name="animItem" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_d64w3")
}

[node name="animDisplay" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_rveng")
}
